[TDC-44] 로컬/테스트 환겅 도커 컴포즈 환경 세팅